--- a/package.json
+++ b/package.json
@@ -6,12 +6,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "lint": "npx eslint --ext .js,.jsx ./src"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
@@ -21,6 +18,9 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.17.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -29,6 +29,7 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "postcss": "^8.4.14",
+    "react-test-renderer": "^18.1.0",
     "tailwindcss": "^3.0.24"
   },
   "eslintConfig": {
